[package]
name        = "muspell-pubsub"
description = "Topic publish/subscribe over the Muspell network protocol"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
muspell-proto     = { path = "../muspell-proto" }
muspell-transport = { path = "../muspell-transport" }

blake3.workspace       = true
bs58.workspace         = true
dashmap.workspace      = true
futures.workspace      = true
serde.workspace        = true
thiserror.workspace    = true
tokio.workspace        = true
tokio-stream.workspace = true
tracing.workspace      = true
ciborium.workspace     = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = "0.3"
